[gd_scene load_steps=4 format=3 uid="uid://cknheak3qlgq0"]

[ext_resource type="PackedScene" uid="uid://kr66w1n28mfn" path="res://Escenas/Piezas/pieza_padre.tscn" id="1_6n74l"]
[ext_resource type="Script" path="res://Scripts/pieza_blanca.gd" id="2_qwcgu"]
[ext_resource type="Texture2D" uid="uid://bm7ml1l7an6wh" path="res://sprites fichas/Ficha_1_B.png" id="3_rdwar"]

[node name="Pieza_blanca" instance=ExtResource("1_6n74l")]
script = ExtResource("2_qwcgu")

[node name="Sprite2D" parent="." index="0"]
texture = ExtResource("3_rdwar")

[node name="Area2D" type="Area2D" parent="." index="1"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D" index="0"]
polygon = PackedVector2Array(12, -76, 12, -44, 44, -36, 52, -12, 76, -12, 76, 12, 52, 12, 44, 36, 12, 44, 12, 76, -12, 76, -12, 44, -44, 36, -52, 12, -76, 12, -76, -12, -52, -12, -44, -36, -12, -44, -12, -76)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
